Fixed menu CSS issues on mobile version

--- a/core/page/css/layout/general.less
+++ b/core/page/css/layout/general.less
@@ -20,7 +20,7 @@
 			// font-size: 0.813rem;
 			font-size: 0.8125rem;
 
-		@media screen and (max-width: @width_break_point_1) {
+		@media screen and (max-width: @width_break_point_0) {
 			font-size: 0.94rem;
 			line-height: 1.2rem;
 		}
